--- a/app/src/main/res/layout/fragment_member_zone.xml
+++ b/app/src/main/res/layout/fragment_member_zone.xml
@@ -66,7 +66,8 @@
         android:id="@+id/SV_login_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/appbar">
+        android:layout_below="@+id/appbar"
+        android:layout_above="@+id/block">
 
         <include
             layout="@layout/member_loginform"
@@ -81,6 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/appbar"
+        android:layout_above="@+id/block"
         android:visibility="gone">
 
         <include
@@ -91,5 +93,11 @@
             android:padding="@dimen/activity_horizontal_margin"/>
 
     </ScrollView>
+
+    <View
+        android:id="@+id/block"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
